--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
-    "deploy": "next build && next export && echo > out/.nojekyll && gh-pages -d out"
+    "deploy": "next build && next export && echo > docs/.nojekyll && gh-pages -d docs"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
