--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "homepage": "https://PdBuilds.github.io/ModularLive",
   "scripts": {
-    "build": "next build && next export",
+    "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
-    "deploy": "next build && next export && echo > docs/.nojekyll && gh-pages -d docs"
+    "deploy": "next build && echo > docs/.nojekyll && gh-pages -d docs"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
@@ -44,6 +44,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "docs": "^0.3.2-canary.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
     "geist": "^1.3.1",
